Net/b47a0acb486a_error.log


--------------------------------------------------------------------
                      Generation ODE/SDE model
--------------------------------------------------------------------


-H CD196HemeSink.txt
Compiling general transition file

Enabling flux balance.
SAVING TIME: 0.006

#Computing p-semiflows and place bounds: 
/usr/local/GreatSPN/bin/PN2ODE /home/EpitCellDifficileHemeSink_unf -M -H CD196HemeSink.txt


 =========================================================
|	      	        PN to ODE        	          |
 =========================================================

 If you find any bug, send an email to beccuti@di.unito.it!
Transition EX_pro_L_e_in has function:  Call["FBA"]

Transition EX_biomass_e_out has function:  Call["FBA"]

Transition EX_val_L_e_in has function:  Call["FBA"]

Transition EX_ile_L_e_in has function:  Call["FBA"]

Transition EX_leu_L_e_out has function:  Call["FBA"]

Transition EX_cys_L_e_in has function:  Call["FBA"]

Transition EX_trp_L_e_in has function:  Call["FBA"]

Transition Inflam has function:  Call["Heam"]

Transition EX_cys_L_e_out has function:  Call["FBA"]

Transition EX_trp_L_e_out has function:  Call["FBA"]

Transition EX_val_L_e_out has function:  Call["FBA"]

Transition EX_ile_L_e_out has function:  Call["FBA"]

Transition EX_leu_L_e_in has function:  Call["FBA"]

Transition EX_biomass_e_in has function:  Call["FBA"]

Transition Starv has function:  Call["Starvation"]

Transition DeathBac has function:  Call["DeathCD"]

Transition Dup has function:  Call["Duplication"]

Transition Death4Treat has function:  Call["DfourT"]

Transition sink_pheme_c_out has function:  Call["FBA"]

Transition Efflux has function:  Call["Efflux"]
Warning: it is not possible to open input file .bnd

Warning: it is not possible to open input file .pin


Transition sink_pheme_c_in has function:  Call["FBA"]

Transition EX_pro_L_e_out has function:  Call["FBA"]



------------------------------------------------
               Start  encoding
------------------------------------------------

Opening file: /home/EpitCellDifficileHemeSink_unf.bnd
Opening file: /home/EpitCellDifficileHemeSink_unf.pin


START EXECUTION...

	Warning: no imlicit places are considered.

	Done.

------------------------------------------------
                 End encoding
------------------------------------------------


===================== INFO =====================
 Total Time: 0.000964 sec
 Total Used Memory: 3840KB
 Output saved in: EpitCellDifficileHemeSink_unf.cpp
================================================


/home/EpitCellDifficileHemeSink_unf
#cd /usr/local/GreatSPN/scripts/../inst_src
#Copying file form /usr/local/GreatSPN/scripts/../inst_src to /tmp/tmp.DQqApVLtmy

#cat /tmp/tmp.DQqApVLtmy/tmpB /tmp/tmp.DQqApVLtmy/incl1  /home/gen_tran_out.cpp  /tmp/tmp.DQqApVLtmy/tmpE >> /tmp/tmp.DQqApVLtmy/tmpA
FuncT
#cat /tmp/tmp.DQqApVLtmy/tmpA >>  /tmp/tmp.DQqApVLtmy/class.cpp

#cd /tmp/tmp.DQqApVLtmy

#Compiling ... 
g++ -D CGLPK -I./  -o  /home/EpitCellDifficileHemeSink_unf.solver  /home/EpitCellDifficileHemeSink_unf.cpp  ./class.cpp  ./lsode.cpp ./GLPKsolve.cpp ./general.cpp ./readSupport.cpp -O3 -std=c++11 -lm -Wall -lglpk
./class.cpp: In function ‘double SDE::FBA(double*, std::vector<FBGLPK::LPprob>&, std::map<std::__cxx11::basic_string<char>, int>&, std::map<std::__cxx11::basic_string<char>, int>&, const std::vector<std::__cxx11::basic_string<char> >&, const InfTr*, int, const double&)’:
./class.cpp:4695:10: error: redeclaration of ‘double nBac’
 4695 |   double nBac = trunc(Value[NumPlaces["CD"]], decimalTrunc);
      |          ^~~~
./class.cpp:4574:10: note: ‘double nBac’ previously declared here
 4574 |   double nBac = trunc(Value[NumPlaces.find("CD") -> second], decimalTrunc);
      |          ^~~~
./class.cpp:4698:26: error: ‘FBAvars’ was not declared in this scope
 4698 |   double rateFBA = trunc(FBAvars[FBAmet[str]], decimalTrunc );
      |                          ^~~~~~~
./class.cpp:4693:7: warning: unused variable ‘index’ [-Wunused-variable]
 4693 |   int index = vec_fluxb[0].fromNametoid(FBAmet.find(str) -> second);
      |       ^~~~~
make: *** [makefile:30: fluxb] Error 1
#Error during compilation. 


